# TrumpStamp

./: .gitignore  README.md  build_android_debug.sh  build_android_release.sh  build_apk.sh  build_xcode_project.sh
Dev_doc/: DECK 0_3.xls  DECK 1_0.xls  DECK 1_3.xls  DECK 1_4.xls  README.md  Trump Hillary Game design doc B.txt  chat jul10.txt  deck_br.txt  needed-assets.txt  СТРУКТУРА ДАННЫХ.doc  СТРУКТУРА ДАННЫХ.txt
Fork/: bots.py  card.py  cards.csv  deck.py  elections.kv  elections_game.py  game_master.py  hand.py  main.py  player.py
Game/: base_screen.py  bots.py  card.py  cards.csv  cards_old.csv  credits_screen.py  db_states.csv  deck.py  elections.kv  elections_game.py  end_screen.py  hand.py  kwad.py  main.py  menu.py  player.py  rounds.csv  rounds538.csv  rounds_screen.py  settings_screen.py  sound_manager.py  start_screen.py  tracker.py
Game _backup/: deck.py  elections_game.py
Game1.0/: bots.py  card.py  elections.kv  elections_game.py
Trump-Kivy/: LenaElections.kv  LenaMain.py  db_short.csv  elections.kv  game classes.py  gameclasses.py  gameclasses_v2_5.py  gameclasses_v2_7.py  gameclasses_v2_8.py  gameclasses_v3_0.py  label_gen.py  main.py  main2.py  processing_functions.py  rounds.csv  test_2_7.py  test_2_8.py  test_3_0.py  test_handsdecks_v2_5.py  test_playcards.py  test_playcards_v2_5.py  text_prosfunc.py  trump.kv
Trump-Kivy/assets/cards/: DECK_1_4.csv
images/: cards v2_4.cdr
lwf_folder/ArcomageTrump/: my_manual.txt
lwf_folder/ArcomageTrump/Game/: CMakeLists.txt
lwf_folder/ArcomageTrump/Game/Source/: game.cpp  main.cpp  ui_manager.cpp
lwf_folder/ArcomageTrump/boost_1_60_0/: CMakeCache.txt  Jamroot  index.html
lwf_folder/ArcomageTrump/boost_1_60_0/bin.v2/: project-cache.jam
lwf_folder/ArcomageTrump/boost_1_60_0/libs/: libraries.htm  maintainers.txt
lwf_folder/ArcomageTrump/boost_1_60_0/libs/container/doc/: Jamfile.v2  container.qbk
lwf_folder/ArcomageTrump/boost_1_60_0/libs/context/doc/: context.qbk  context.xml  execution_context.qbk  fcontext.qbk  stack.qbk
lwf_folder/ArcomageTrump/boost_1_60_0/libs/context/test/: Jamfile.v2
lwf_folder/ArcomageTrump/boost_1_60_0/more/getting_started/: unix-variants.html  windows.html
lwf_folder/ArcomageTrump/boost_1_60_0/status/: Jamfile.v2
lwf_folder/ArcomageTrump/compile/: CMakeCache.txt  Makefile  cmake_install.cmake
lwf_folder/ArcomageTrump/compile/Game/: Makefile  cmake_install.cmake
neuroprocessor/cudarray-master-src/: Makefile
(+701 files in other folders)
